--- a/style.css
+++ b/style.css
@@ -6,11 +6,6 @@
   box-sizing: border-box;
 }
 
-@font-face {
-  font-family: myFont;
-  src: url(Manrope/static/Manrope-Light.ttf);
-}
-
 html,
 body {
   width: 100%;
@@ -23,13 +18,13 @@ body {
   height: 100%;
 }
 
-#nav-bar {
+#nav-bar-1 {
   width: 100%;
-  height: 80px;
-  background-color: aqua;
+  height: 50px;
+  /* background-color: aqua; */
   display: flex;
   justify-content: space-between;
-  padding: 10px 40px;
+  padding: 0px 40px;
 }
 
 #logo {
@@ -56,4 +51,53 @@ body {
 #nav-elem h4 {
   font-size: 15px;
   font-weight: 500;
+  letter-spacing: 1px;
+}
+
+#nav-elem span {
+  color: rgb(139, 139, 165);
+}
+
+#nav-bar-2 {
+  width: 100%;
+  height: 50px;
+  padding: 0px 40px;
+  /* background-color: rgb(221, 149, 149); */
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+}
+
+#nav-bar-2 h4 {
+  font-size: 15px;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+#content {
+  width: 100%;
+  height: calc(100% - 100px);
+  background-color: cadetblue;
+  /* padding: 0px 40px; */
+}
+
+#info-content{
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.elem {
+  width: 50%;
+  height: 250px;
+  background-color: red;
+  border: 2px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+}
+
+.elem h1{
+    font-size: 5.5rem;
+    font-weight: 500;
 }
