--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Abel&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
+
 * {
   margin: 0;
   padding: 0;
@@ -10,7 +13,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  font-family: "Nanum Myeongjo", serif;
+  font-family: "Mulish", sans-serif;
 }
 
 #main {
@@ -84,30 +87,42 @@ body {
 #content {
   width: 100%;
   height: calc(100% - 100px);
-  background-color: cadetblue;
-  /* padding: 0px 40px; */
+  /* background-color: cadetblue; */
+  padding: 0px 40px;
 }
 
 #info-content {
   display: flex;
   flex-wrap: nowrap;
   width: 100%;
-  height: 45%;
+  height: 40%;
+  overflow-x: auto;
   /* background-color: aqua; */
 }
 
+#info-content::-webkit-scrollbar {
+  background-color: transparent;
+  height: 5px;
+}
+
+#info-content::-webkit-scrollbar-thumb {
+  background-color: rgb(216, 108, 108);
+}
+
 .elem {
-  width: 65%;
+  width: 53%;
   height: 100%;
-  background-color: red;
-  border: 2px solid black;
+  /* background-color: red; */
+  /* border: 2px solid black; */
   display: flex;
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
+  /* padding: 40px; */
 }
 
 .elem h1 {
-  font-size: 5.5rem;
-  font-weight: 500;
+  font-size: 7rem;
+  font-weight: 300;
+  font-family: "Montserrat", sans-serif;
 }
